修复 注销功能清空用户名密码

--- a/MobilePlat/AndroidManifest.xml
+++ b/MobilePlat/AndroidManifest.xml
@@ -41,6 +41,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:launchMode="singleTask"
             android:name="com.leading.mobileplat.ActivityProgram"
             android:label="@string/title_activity_program" >
         </activity>
