--- a/LocaleQuestion/AndroidManifest.xml
+++ b/LocaleQuestion/AndroidManifest.xml
@@ -34,11 +34,11 @@
             android:launchMode="singleTask"
             android:label="@string/app_name" >
             <intent-filter>
-				 <!-- <action android:name="com.leading.localequestion" />
-                 <category android:name="android.intent.category.DEFAULT" />  -->
+				 <action android:name="com.leading.localequestion" />
+                 <category android:name="android.intent.category.DEFAULT" /> 
                  
-                    <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />  
+                    <!-- <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />   -->
             </intent-filter>
         </activity>
         <activity android:name="com.leading.localequestion.ActivityFeedbackUnresolved"
